@@ -1,5 +1,13 @@
 2005-11-02  Christian Persch  <chpe@cvs.gnome.org>
 
+	* embed/mozilla/EphyAboutModule.cpp:
+	* embed/mozilla/EphyAboutModule.h:
+
+	Add titles with title capitalisation, and chanage the icon
+	on the netOffline error page.
+
+2005-11-02  Christian Persch  <chpe@cvs.gnome.org>
+
 	* lib/egg/egg-editable-toolbar.c: (create_item_from_action),
 	(item_added_cb):
 
